--- a/Desafios_SalaDeAula/d10/css/style.css
+++ b/Desafios_SalaDeAula/d10/css/style.css
@@ -1,4 +1,67 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=Bebas+Neue&family=Rubik&family=Sacramento&family=Secular+One&display=swap');
+
+
+@font-face {
+    font-family: 'android';
+    src: url('/Desafios_SalaDeAula/d10/fontes/idroid.otf') format('opentype');
+    font-weight: normal;
+}
+
+:root{
+    --cor0: #C5EBD6;
+    --cor1: #8CB89F;
+    --cor2: #4A8565;
+    --cor3: #1D5235;
+    --cor4: #0d4627;
+    --cor5: #042713;
+
+    --fonte-padrao: arial, verdana, helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', cursive;
+    --fonte-android: 'Android', cursive;
+}
+
 * {
-    background-color: darkturquoise;
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
+}
+
+header {
+    background-color: var(--cor4);
+}
+
+header > h1{
+    color: white;
+    font-family: var(--fonte-destaque);
+}
+
+header > p {
+    color: white
+}
+
+nav {
+    background: var(--cor4);
+}
+
+main {background: white;}
+
+main h1 {
+    color: var(--cor5);
+    font-family: var(--fonte-android);
+}
+
+main h2 {
+    font-family: var(--fonte-android);
+}
+
+footer {
+
+    background-color: var(--cor5);
+    color: white
 }
