--- a/Desafios_SalaDeAula/d10/css/style.css
+++ b/Desafios_SalaDeAula/d10/css/style.css
@@ -52,7 +52,7 @@ nav {
 main {
     min-width: 300px;
     max-width: 1000px;
-    margin:auto;
+    margin:auto; /*Para telas grandes*/
     background: white;
 }
 
