--- a/Desafios_SalaDeAula/d10/css/style.css
+++ b/Desafios_SalaDeAula/d10/css/style.css
@@ -41,6 +41,7 @@ header {
     min-height: 150px;
     text-align: center;
     padding-top: 40px;
+    padding-bottom: 15px;
 }
 
 header > h1{
@@ -52,7 +53,7 @@ header > h1{
 }
 
 header > p {
-    color: white;
+    color: var(--cor1);
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     max-width: 500px;
@@ -139,6 +140,22 @@ main img.pequena {
     max-width: 350px;
     display: block;
     margin: auto;
+}
+
+div.video {
+    background-color: var(--cor4);
+    margin: 0 -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 58%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 
 main aside {
